testcases/bad/case_no_branch.cl
class Main {
    main(): Object {
        case 2 of 
            x:String=> 3;
        esac
    };
};
